src/test/resources/invalid/typecheck/MethodNotFound.vas
class Main is
    this() is
        var i : Integer = 0
        i.foobar(2)
    end
end